[package]
name = "justice"
version = "0.1.0"
authors = ["崔朋"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"winapi" = { version = "0.3.8", features = ["winuser", "memoryapi", "processthreadsapi", "handleapi"] }
"native-windows-gui" = "0.2.1"